--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
 "env": {
   "OWNER_NAME": {
   "description": "Name of Bot Owner",
-      "value": "Eren Yeager"
+      "value": "AKSHITBOT"
   },
   "ALIVE_MESSAGE": {
     "description": "Alive message for bot",
