--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,5 +1,5 @@
-FROM quay.io/sampandey001/secktor
-RUN git clone https://github.com/akshitbhatia/WHATSAPP_AKBOT /root/akshitbhatia2004
+FROM quay.io/akshitbhatia2004/whatsapp_akbot
+RUN git clone https://github.com/akshitbhatia/WHATSAPP_AKBOT /root/akshitbhatia2004/
 WORKDIR /root/akshitbhatia2004/
 RUN npm install npm@latest
 RUN yarn install --network-concurrency 1
