--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
-RUN git clone https://github.com/akshitbhatia/WHATSAPP_AKBOT /root/SamPandey001/
-WORKDIR /root/SamPandey001/
+RUN git clone https://github.com/akshitbhatia2004/WHATSAPP_AKBOT /root/akshitbhatia2004/
+WORKDIR /root/akshitbhatia2004/
 RUN npm install npm@latest
 RUN yarn install --network-concurrency 1
 EXPOSE 8000
