--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -2,6 +2,7 @@ FROM fusuf/whatsasena:latest
 RUN git clone https://github.com/akshitbhatia2004/WHATSAPP_AKBOT /root/akshitbhatia2004/
 WORKDIR /root/akshitbhatia2004/
 ENV TZ=Asia/Kolkata
+RUN npm install supervisor -g
 RUN yarn install --network-concurrency 1
 EXPOSE 8000
 CMD ["npm", "start"]
