--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
                 },
                "author": "akshitbhatia2004",
               "dependencies": {
-                          "@adiwajshing/baileys": "github:akshitbhatia2004/baileys",
+                          "@whiskeysockets/baileys": "github:akshitbhatia2004/baileys",
                        "@adiwajshing/keyed-db": "^0.2.4",
                        "awesome-phonenumber": "^3.3.0",
                        "anime-character-random": "latest",
