--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
                "type": "commonjs",
                "license": "GPL-3.0",
    "scripts": {
-               "start": "pm2 start lib/client.js --deep-monitoring --attach --name whatsapp_akbot",
-                "stop": "pm2 stop secktor"
+               "start": "pm2 start lib/client.js --deep-monitoring --attach --name WHATSAPP_AKBOT",
+                "stop": "pm2 stop WHATSAPP_AKBOT"
                 },
-               "author": "SamPandey001",
+               "author": "akshitbhatia2004",
               "dependencies": {
                        "@whiskeysockets/baileys": "latest", 
                        "@adiwajshing/keyed-db": "^0.2.4",
