--- a/app.json
+++ b/app.json
@@ -89,10 +89,10 @@
      "required": false 
   }
 },
-"formation": {
-		"worker": {
-			"quantity": 1,
-			"size": "basic"
-		}
-	}
-}
+     "buildpacks": [
+        {
+            "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
+        }
+     ],
+  "stack": "heroku-22"
+   }
