--- a/sample-config.env
+++ b/sample-config.env
@@ -1,5 +1,8 @@
 # ____REMOVE THIS LINE AFTER RENAMING sample.config.env to config.env ____
 THUMB_IMAGE = "https://raw.githubusercontent.com/SecktorBot/Brandimages/main/logos/SocialLogo%201.png"
+SESSION_ID=
+MONGO_URI=
+OWNER_NUMER=
 port = 5000
 email = "akshitbot4.0@gmail.com"
 global_url = "instagram.com"
@@ -16,4 +19,29 @@ WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count 
 THEME= SECKTOR
 WORKTYPE = public
 PACK_INFO = "AKSHIT;BOT"
+ANTILINK_VALUES = "chat.whatsapp.com"
+
+
+# ____REMOVE THIS LINE AFTER RENAMING sample.config.env to config.env ____
+SESSION_ID=
+MONGO_URI=
+OWNER_NUMER=
+THUMB_IMAGE = "https://raw.githubusercontent.com/SecktorBot/Brandimages/main/logos/SocialLogo%201.png"
+port = 5000
+email = "sam@secktor.live"
+AUTO_BIO=false
+global_url = "instagram.com"
+OWNER_NAME = "SamPandey001"
+AUTO_REACTION = false
+FAKE_COUNTRY_CODE = 92
+READ_MESSAGE = false
+PREFIX = .
+WARN_COUNT = 3
+DISABLE_PM = false
+ANTI_BAD_WORD = "fuck"
+LEVEL_UP_MESSAGE= true
+WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count th"
+THEME= SECKTOR
+WORKTYPE = public
+PACK_INFO = "Sam;Pandey"
 ANTILINK_VALUES = "chat.whatsapp.com"
