--- a/package.json
+++ b/package.json
@@ -13,57 +13,52 @@
               "dependencies": {
                        "@whiskeysockets/baileys": "latest", 
                        "@adiwajshing/keyed-db": "^0.2.4",
-                       "awesome-phonenumber": "^3.3.0",
-                       "anime-character-random": "latest",
-                       "axios": "^0.24.0",
-                       "cheerio": "^1.0.0-rc.10",
-                       "crypto-js":"latest",
-                       "chalk": "^4.1.2",
-                       "@hapi/boom": "^9.1.4",
-                       "child_process": "^1.0.2",
-                       "discord-mongoose-economy": "^1.2.0",
-                       "express": "^4.18.1",
-                       "fs-extra": "^10.1.0",
-                       "koyeb-api-client":"latest",
-                       "dotenv": "^16.0.0",
-                       "discord-xp": "^1.1.16",
-                       "mongoose": "^6.2.1",
-                       "mumaker": "^1.0.0",
-                       "google-it": "^1.6.2",
-                       "file-type": "^16.5.3",
-                       "form-data": "^4.0.0",
-                       "ffmpeg": "^0.0.4",
-                       "fluent-ffmpeg": "^2.1.2",
-                       "heroku-client": "3.1.0",
-                       "async-g-i-s": "^1.4.0",
-                       "human-readable": "^0.2.1",
-                       "jimp": "^0.16.1",
-                       "jsdom": "^16.4.0",
-                       "moment-timezone": "^0.5.34",
-                       "mailist": "^1.0.3",
-                       "openai": "3.0.0",
-                       "pm2": "^5.2.0",
-                       "node-cron": "^3.0.0",
-                       "node-fetch": "^2.6.1",
-                       "node-webpmux": "^3.1.0",
-                       "google-tts-api": "^2.0.2",
-                       "path": "^0.12.7",
-                       "request": "^2.88.2",
-                       "simple-git": "^3.16.1",
-                       "@shineiichijo/marika": "^2.0.3",           
-                       "translatte": "^3.0.1",
-                       "util": "^0.12.4",           
-                        "secktor-pack": "latest",
-                       "ytdl-secktor": "latest",
-                       "google-image-sr": "^1.0.0",
-                       "aptoide-scraper": "^1.0.1",
-                       "getscreenshot.js": "1.0.0",
-                       "@blackamda/telegram-image-url": "^1.0.0",
-                       "fouadwa-scraper": "2.0.0",
-                       "pastebin-js": "latest",
-                       "mfiredlcore-vihangayt": "^1.0.0",
-                       "wa-sticker-formatter": "^4.3.2",
-                       "wa_set_pkg":"1.0.1"
+             "@hapi/boom": "^9.1.4",
+             "@whiskeysockets/baileys": "6.6.0",             
+             "acrcloud": "^1.4.0",
+             "anime-character-random": "latest",
+             "aptoide-scraper": "^1.0.1",
+             "async-g-i-s": "^1.4.0",
+             "axios": "^0.24.0",
+             "canvas": "^2.11.2",
+             "cheerio": "^1.0.0-rc.10",
+             "child_process": "^1.0.2",
+             "crypto-js": "latest",
+             "discord-mongoose-economy": "^1.2.0",
+             "discord-xp": "^1.1.16",
+             "dotenv": "^16.0.0",
+             "express": "^4.18.1",
+             "ffmpeg": "^0.0.4",
+             "file-type": "^16.5.3",
+             "fluent-ffmpeg": "^2.1.2",
+             "form-data": "^4.0.0",
+             "fs-extra": "^10.1.0",
+             "google-it": "^1.6.4",
+             "google-tts-api": "^2.0.2",
+             "heroku-client": "3.1.0",
+             "human-readable": "^0.2.1",
+             "jimp": "^0.16.1",
+             "jsdom": "^16.4.0",
+             "koyeb-api-client": "latest",
+             "moment-timezone": "^0.5.34",
+             "mongoose": "^6.2.1",
+             "mumaker": "^2.0.0",
+             "node-cron": "^3.0.0",
+             "node-fetch": "^2.6.1",
+             "node-webpmux": "^3.1.0",
+             "pastebin-js": "latest",
+             "path": "^0.12.7",
+             "pg": "^8.11.3",
+             "pm2": "^5.2.0",
+             "qrcode": "latest",
+             "secktor-pack": "latest",
+             "simple-git": "^3.15.1",
+             "translatte": "^3.0.1",
+             "util": "^0.12.4",
+             "wa-sticker-formatter": "^4.3.2",
+             "youtubei.js": "^7.0.0",
+             "ytdl-secktor": "^0.0.1-development",
+             "link-preview-js": "^3.0.0"
                       },
                   "directories": {
                        "lib": "lib",
