--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,4 +1,4 @@
-FROM  quay.io/sampandey001/secktor
+FROM quay.io/akshitbhatia2004/whatsapp_akbot_md
 RUN git clone https://github.com/akshitbhatia2004/WHATSAPP_AKBOT /root/akshitbhatia2004/
 WORKDIR /root/akshitbhatia2004/
 ENV TZ=Asia/Kolkata
