--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,7 +1,6 @@
-FROM quay.io/akshitbhatia2004/whatsapp_akbot_md
-RUN git clone https://github.com/akshitbhatia2004/WHATSAPP_AKBOT /root/akshitbhatia2004/
-WORKDIR /root/akshitbhatia2004/
-ENV TZ=Asia/Kolkata
+FROM quay.io/sampandey001/secktor
+RUN git clone https://github.com/akshitbhatia2004/WHATSAPP_AKBOT /root/SamPandey001
+WORKDIR /root/SamPandey001/
 RUN npm install npm@latest
 RUN npm install
 EXPOSE 8000
