--- a/sample-config.env
+++ b/sample-config.env
@@ -2,7 +2,7 @@
 THUMB_IMAGE = "https://raw.githubusercontent.com/SecktorBot/Brandimages/main/logos/SocialLogo%201.png"
 SESSION_ID=
 MONGO_URI=
-OWNER_NUMER=
+OWNER_NUMER=919971606684
 port = 5000
 email = "akshitbot4.0@gmail.com"
 global_url = "instagram.com"
